<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".NuevoViajeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/como_comienzas" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="14">

            <RadioGroup
                android:id="@+id/radiogroup_comienzoviaje"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <RadioButton
                    android:id="@+id/radiobutton_cabecera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:checked="true"
                    android:text="@string/radiobutton_cabecera" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radiobutton_relevo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radiobutton_relevo" />

                    <EditText
                        android:id="@+id/input_viajeros_relevo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_numero_viajeros_relevo"
                        android:layout_marginLeft="2dp"/>
                </LinearLayout>


            </RadioGroup>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/boton_comenzar_viaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_comenzar_viaje"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>